2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-nfs-lock.c: Improve logging.
	
	* src/trackerd/tracker-dbus-daemon.c: Renamed  _do_cleanup() to
	_shutdown() and make it ONLY stop the main loop so we clean up
	every time after the mainloop stops.
	
	* src/trackerd/tracker-main.[ch]: Refactored this heavily to make
	the code start up and shut down flow easier to follow.
	
	* src/trackerd/tracker-process-files.c: Removed
	tracker->update_count since it was redundant.

2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-nfs-lock.[ch]: Cleaned up code to
	be consistent.
	
	* src/trackerd/tracker-db-sqlite.c: Fixed warning.
	
	* src/trackerd/tracker-dbus-search.c: Always call
	tracker_dbus_query_result_to_ptr_array() since it creates the
	return value even if the result set is empty.

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db-sqlite.c:
	* src/libtracker-db/tracker-db-interface-sqlite.h:
	* src/libtracker-db/tracker-db-interface-sqlite.c: Corrected the 
	GThreadQueue to have ALL sqlite_* calls in the same thread. This
	work needs some refactoring later. Especially the changes in 
	tracker-db-sqlite.c are not quite the way I eventually want them.

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus-search.c: Bugfix when the amount of search
	results was 0

2008-05-08  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/Makefile.am
	* src/libtracker-common/tracker-nfs-lock.c
	* src/libtracker-common/tracker-nfs-lock.h
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-main.c:
	Moved NFS lock code to his own module in libtracker-common.
	
2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.[ch]: 
	* src/trackerd/tracker-dbus-daemon.c:
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-process-files.c: Cleaned up the Tracker