@@ -37,7 +37,7 @@
 #define KEY_VERBOSITY				 "Verbosity"
 #define KEY_INITIAL_SLEEP			 "InitialSleep"
 #define KEY_LOW_MEMORY_MODE			 "LowMemoryMode"
-
+#define KEY_NFS_LOCKING                          "NFSLocking"
 #define GROUP_WATCHES				 "Watches"
 #define KEY_WATCH_DIRECTORY_ROOTS		 "WatchDirectoryRoots"
 #define KEY_CRAWL_DIRECTORY_ROOTS		 "CrawlDirectory"
@@ -82,6 +82,7 @@
 #define DEFAULT_VERBOSITY			 0
 #define DEFAULT_INITIAL_SLEEP			 45	  /* 0->1000 */
 #define DEFAULT_LOW_MEMORY_MODE			 TRUE
+#define DEFAULT_NFS_LOCKING                      FALSE
 #define DEFAULT_ENABLE_WATCHES			 TRUE
 #define DEFAULT_THROTTLE			 0	  /* 0->20 */
 #define DEFAULT_ENABLE_INDEXING			 TRUE
@@ -116,6 +117,7 @@ struct _TrackerConfigPriv {
 	gint	  verbosity;
 	gint	  initial_sleep;
 	gboolean  low_memory_mode;
+	gboolean  nfs_locking;
 
 	/* Watches */
 	GSList	 *watch_directory_roots;
@@ -176,6 +178,7 @@ enum {
 	PROP_VERBOSITY,
 	PROP_INITIAL_SLEEP,
 	PROP_LOW_MEMORY_MODE,
+	PROP_NFS_LOCKING,
 
 	/* Watches */
 	PROP_WATCH_DIRECTORY_ROOTS,
@@ -257,6 +260,14 @@ tracker_config_class_init (TrackerConfigClass *klass)
 							       "Use extra memory at the "
 							       "expense of indexing speed",
 							       DEFAULT_LOW_MEMORY_MODE,
+							       G_PARAM_READWRITE | G_PARAM_CONSTRUCT));
+	g_object_class_install_property (object_class,
+					 PROP_NFS_LOCKING,
+					 g_param_spec_boolean ("nfs-locking",
+							       "Use NFS friendly location for lock file",
+							       "In NFS filesystems is not safe to have "
+							       "the lock file in the home directory",
+							       DEFAULT_NFS_LOCKING,
 							       G_PARAM_READWRITE | G_PARAM_CONSTRUCT));
 
 	/* Watches */
@@ -563,6 +574,9 @@ config_get_property (GObject	*object,
 	case PROP_LOW_MEMORY_MODE:
 		g_value_set_boolean (value, priv->low_memory_mode);
 		break;
+	case PROP_NFS_LOCKING:
+		g_value_set_boolean (value, priv->nfs_locking);
+		break;
 
 		/* Watches */
 	case PROP_WATCH_DIRECTORY_ROOTS:
@@ -693,6 +707,10 @@ config_set_property (GObject	  *object,
 	case PROP_LOW_MEMORY_MODE:
 		tracker_config_set_low_memory_mode (TRACKER_CONFIG (object),
 						    g_value_get_boolean (value));
+		break;
+	case PROP_NFS_LOCKING:
+		tracker_config_set_nfs_locking (TRACKER_CONFIG (object),
+						g_value_get_boolean (value));
 		break;
 
 		/* Watches */
@@ -984,6 +1002,11 @@ config_create_with_defaults (const gchar *filename)
 	g_key_file_set_comment (key_file, GROUP_GENERAL, KEY_LOW_MEMORY_MODE,
 				" Minimizes memory use at the expense of indexing speed",
 				NULL);
+	g_key_file_set_boolean (key_file, GROUP_GENERAL, KEY_NFS_LOCKING, DEFAULT_NFS_LOCKING);
+	g_key_file_set_comment (key_file, GROUP_GENERAL, KEY_NFS_LOCKING,
+				" Set to TRUE when the home directory is in a NFS filesystem",
+				NULL);
+
 
 	/* Watches */
 	g_key_file_set_string_list (key_file, GROUP_WATCHES, KEY_WATCH_DIRECTORY_ROOTS,
@@ -1334,6 +1357,7 @@ config_load (TrackerConfig *config)
 	config_load_int (config, "verbosity", key_file, GROUP_GENERAL, KEY_VERBOSITY);
 	config_load_int (config, "initial-sleep", key_file, GROUP_GENERAL, KEY_INITIAL_SLEEP);
 	config_load_boolean (config, "low-memory-mode", key_file, GROUP_GENERAL, KEY_LOW_MEMORY_MODE);
+	config_load_boolean (config, "nfs-locking", key_file, GROUP_GENERAL, KEY_NFS_LOCKING);
 
 	/* Watches */
 	config_load_string_list (config, "watch-directory-roots", key_file, GROUP_WATCHES, KEY_WATCH_DIRECTORY_ROOTS);
@@ -1448,6 +1472,19 @@ tracker_config_get_low_memory_mode (TrackerConfig *config)
 
 	return priv->low_memory_mode;
 }
+
+gboolean
+tracker_config_get_nfs_locking (TrackerConfig *config)
+{
+	TrackerConfigPriv *priv;
+
+	g_return_val_if_fail (TRACKER_IS_CONFIG (config), DEFAULT_NFS_LOCKING);
+
+	priv = GET_PRIV (config);
+
+	return priv->nfs_locking;
+}
+
 
 GSList *
 tracker_config_get_watch_directory_roots (TrackerConfig *config)
@@ -1858,6 +1895,21 @@ tracker_config_set_low_memory_mode (TrackerConfig *config,
 	priv->low_memory_mode = value;
 	g_object_notify (G_OBJECT (config), "low-memory-mode");
 }
+
+void
+tracker_config_set_nfs_locking (TrackerConfig *config,
+				gboolean      value)
+{
+	TrackerConfigPriv *priv;
+
+	g_return_if_fail (TRACKER_IS_CONFIG (config));
+
+	priv = GET_PRIV (config);
+
+	priv->nfs_locking = value;
+	g_object_notify (G_OBJECT (config), "nfs-locking");
+}
+
 
 void
 tracker_config_set_enable_watches (TrackerConfig *config,
