@@ -26,7 +26,7 @@
 
 G_BEGIN_DECLS
 
-void     tracker_nfs_lock_init    (const gchar *root_dir);
+void     tracker_nfs_lock_init    (const gchar *root_dir, gboolean nfs);
 gboolean tracker_nfs_lock_obtain  (void);
 void     tracker_nfs_lock_release (void);
 void     tracker_nfs_lock_term    (void);
